fix(Post): Fixes mobile layout issue

--- a/src/css/Posts.module.css
+++ b/src/css/Posts.module.css
@@ -18,6 +18,7 @@
 
 .simpleImage {
   width: 100%;
+  margin-right: 2rem;
 }
 .date {
   font-family: 'Karla', 'sans-serif';
@@ -104,5 +105,13 @@
 @media only screen and (max-width: 376px) {
   .singleconcept {
     line-height: 2rem;
+  }
+  .simpleContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .simpleImage {
+    margin: 0;
   }
 }
